fixed banner component and global.css file

--- a/src/components/globals.css
+++ b/src/components/globals.css
@@ -7,7 +7,7 @@
   --principal-blue: #0E2240; /*Principal Blue*/
   --principal-red: #E31D1A; /*Principal Red*/
   --medium-gray: #777777; /*Medium Gray*/
-  --light-gray: #CCCCCC; /*Light Gray*/
+  --high-gray: #CCCCCC; /*High Gray*/
   --light: #F4F4F4; /*Light*/
   --white: #FFFFFF; /*Light*/
 
